@@ -1,3 +1,8 @@
+2006-07-28  Walter Doerwald  <walter@livinglogic.de>
+
+	* IPython/Extensions/ipipe.py: Fix isort.__iter__() (was still using
+	the mode argument).
+
 2006-07-27  Walter Doerwald  <walter@livinglogic.de>
 
 	* IPython/Extensions/ipipe.py: Fix getglobals() if we're
@@ -26,7 +31,7 @@
 
 2006-07-26  Ville Vainio  <vivainio@gmail.com>
 
-	* iplib.py: history now stores multiline input as single 
+	* iplib.py: history now stores multiline input as single
 	history entries. Patch by Jorgen Cederlof.
 
 2006-07-18  Walter Doerwald  <walter@livinglogic.de>
